Prepare for release 1.2.10